# neuralnetwork

./: CMakeLists.txt  main.cpp  run.cpp  train.cpp
NeuralNetworkLib/: CMakeLists.txt
NeuralNetworkLib/include/: Layer.h  Matrix.h  NeuralNetwork.h  Neuron.h
NeuralNetworkLib/source/: Layer.cpp  Matrix.cpp  Neuron.cpp
NeuralNetworkLib/source/util/: Misc.cpp
config/: run.json  train.json  weights.json
include/: Layer.h  Matrix.h  NeuralNetwork.h  Neuron.h
include/util/: Math.h  Misc.h
source/: Layer.cpp  Matrix.cpp  NeuralNetwork.cpp  Neuron.cpp
source/util/: Math.cpp  Misc.cpp
